add i18n to option items

--- a/projects/mt-form-builder/src/lib/components/lib/checkbox-input/checkbox-input.component.html
+++ b/projects/mt-form-builder/src/lib/components/lib/checkbox-input/checkbox-input.component.html
@@ -2,8 +2,9 @@
   [ngClass]="{'mat-error' : config.errorMsg}">
   <label class="mgfb-label" [for]="base.ctrlKey">{{config.label}}</label>
   <div style="display: flex;flex-wrap: wrap;" [ngStyle]="{'flex-direction':config.direction==='row'?'row':'column'}">
-    <mat-checkbox *ngFor="let val of config.options" style="flex-grow: 1;margin-bottom: 12px;" [formControlName]="val">
-      {{val}}</mat-checkbox>
+    <mat-checkbox *ngFor="let val of config.options" style="flex-grow: 1;margin-bottom: 12px;"
+      [formControlName]="val.value">
+      {{val.label}}</mat-checkbox>
   </div>
 </form>
 <div class="mgfb-radio-checkbox-error mat-error" *ngIf="base.matcher">
