--- a/projects/mt-form-builder/src/lib/components/lib/file-upload/file-upload.component.html
+++ b/projects/mt-form-builder/src/lib/components/lib/file-upload/file-upload.component.html
@@ -1,2 +1,2 @@
 <input #upload type="file" (change)="updateCtrl($event.target.files)" style="display: none;">
-<button mat-raised-button color="primary" (click)="upload.click()" style="width: 100%;">{{config.label}}</button>
+<button mat-raised-button color="primary" (click)="upload.click()" style="width: 100%;">{{formInfoSvc.i18nLabel[config.label] || config.label}}</button>
