support masking, required and autocomplete

--- a/projects/mt-form-builder/src/lib/components/factory/factory.component.html
+++ b/projects/mt-form-builder/src/lib/components/factory/factory.component.html
@@ -1,7 +1,7 @@
 <!-- NOTE:dynamic fields are consider as seperate form -->
 <div>
         <div *ngFor="let group of fis.totalRowGroupedRowCollection[formId]" style="display: flex;align-items: center;">
-                <div name="form-body" [ngClass]="{'form-body':formInfo.repeatable}" style="flex:1">
+                <div name="form-body" [ngClass]="{'form-body':formInfo.repeatable&&!formInfo.disabled}" style="flex:1">
                         <div *ngFor="let rowIndex of fis.totalRowGroupedRowCollectionIndex[formId][group];"
                                 style="display: flex;">
                                 <ng-container *ngFor="let config of fis.layoutCollection[formId][rowIndex]"
