--- a/projects/mt-form-builder/src/lib/components/lib/checkbox-input/checkbox-input.component.html
+++ b/projects/mt-form-builder/src/lib/components/lib/checkbox-input/checkbox-input.component.html
@@ -1,6 +1,6 @@
 <form *ngIf="config.display" [formGroup]="childFormGroup" style="padding-bottom: 1.25em;"
   [ngClass]="{'mat-error' : config.errorMsg}">
-  <label class="mgfb-label" [for]="base.ctrlKey">{{formInfoSvc.i18nLabel[config.label] || config.label}}</label>
+  <label class="mgfb-label" [for]="base.ctrlKey"><span>{{formInfoSvc.i18nLabel[config.label] || config.label}}</span><span class="mat-required">{{config.required?'*':''}}</span></label>
   <div style="display: flex;flex-wrap: wrap;" [ngStyle]="{'flex-direction':config.direction==='row'?'row':'column'}">
     <ng-container *ngFor="let val of config.options">
       <mat-checkbox *ngIf="childFormGroup.contains(val.value)" style="flex-grow: 1;margin-bottom: 12px;"
@@ -10,4 +10,4 @@
   </div>
 </form>
 <div class="mgfb-radio-checkbox-error mat-error" *ngIf="base.matcher">
-  {{config.errorMsg}}</div>
+  {{formInfoSvc.i18nLabel[config.errorMsg] || config.errorMsg}}</div>
