--- a/projects/mt-form-builder/src/lib/components/lib/paginated-select/paginated-select.component.html
+++ b/projects/mt-form-builder/src/lib/components/lib/paginated-select/paginated-select.component.html
@@ -1,6 +1,6 @@
 <mat-form-field *ngIf="config.display">
   <mat-label>{{formInfoSvc.i18nLabel[config.label] || config.label}}</mat-label>
-  <mat-select [formControl]="base.ctrl" [errorStateMatcher]="base.matcher">
+  <mat-select [formControl]="base.ctrl" [errorStateMatcher]="base.matcher"  [required]="config.required">
     <mat-option [value]="el.value" *ngFor="let el of config.options">{{formInfoSvc.i18nLabel[el.label] || el.label}}
     </mat-option>
     <mat-option *ngIf="!loading && !loadComplete()">
@@ -10,5 +10,5 @@
       </div>
     </mat-option>
   </mat-select>
-  <mat-error>{{config.errorMsg}}</mat-error>
+  <mat-error>{{formInfoSvc.i18nLabel[config.errorMsg] || config.errorMsg}}</mat-error>
 </mat-form-field>
