--- a/projects/mt-form-builder/src/lib/components/lib/radio-input-multi/radio-input-multi.component.html
+++ b/projects/mt-form-builder/src/lib/components/lib/radio-input-multi/radio-input-multi.component.html
@@ -1,6 +1,6 @@
 <form *ngIf="config.display" [formGroup]="fg" style="padding-bottom: 1.25em;"
   [ngClass]="{'mat-error' : config.errorMsg}">
-  <label class="mgfb-label" [for]="base.ctrlKey">{{formInfoSvc.i18nLabel[config.label] || config.label}}</label>
+  <label class="mgfb-label" [for]="base.ctrlKey"><span>{{formInfoSvc.i18nLabel[config.label] || config.label}}</span><span class="mat-required">{{config.required?'*':''}}</span></label>
   <mat-radio-group style="display: flex;" [formControlName]="base.ctrlKey"
     [ngStyle]="{'flex-direction':config.direction==='row'?'row':'column'}">
     <mat-radio-button *ngFor="let val of config.options" [value]="val.value" style="flex-grow: 1;margin-bottom: 12px;">
@@ -9,4 +9,4 @@
   </mat-radio-group>
 </form>
 <div class="mgfb-radio-checkbox-error mat-error" *ngIf="config.errorMsg">
-  {{config.errorMsg}}</div>
+  {{formInfoSvc.i18nLabel[config.errorMsg] || config.errorMsg}}</div>
