--- a/projects/mt-form-builder/src/lib/components/lib/virtual-scroll-select/virtual-scroll-select.component.html
+++ b/projects/mt-form-builder/src/lib/components/lib/virtual-scroll-select/virtual-scroll-select.component.html
@@ -1,6 +1,6 @@
 <mat-form-field *ngIf="config.display">
     <mat-label>{{formInfoSvc.i18nLabel[config.label] || config.label}}</mat-label>
-    <mat-select [formControl]="base.ctrl" [errorStateMatcher]="base.matcher" (openedChange)="scrollTop($event,viewPort)">
+    <mat-select [formControl]="base.ctrl" [errorStateMatcher]="base.matcher" (openedChange)="scrollTop($event,viewPort)" [required]="config.required">
         <mat-option *ngIf="selected" [value]="selected.value" style="display:none">
             {{formInfoSvc.i18nLabel[selected.label] || selected.label}}</mat-option>
         <cdk-virtual-scroll-viewport #viewPort [itemSize]="42" [style.height.px]=5*42 [minBufferPx]="210" [maxBufferPx]="420">
@@ -8,5 +8,5 @@
                 {{formInfoSvc.i18nLabel[el.label] || el.label}}</mat-option>
         </cdk-virtual-scroll-viewport>
     </mat-select>
-    <mat-error>{{config.errorMsg}}</mat-error>
+    <mat-error>{{formInfoSvc.i18nLabel[config.errorMsg] || config.errorMsg}}</mat-error>
 </mat-form-field>
