--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,7 +1,3 @@
-<mat-form-field>
-    <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
-</mat-form-field>
-
 <div class="mat-elevation-z8">
     <table mat-table [dataSource]="dataSource" matSort>
 
@@ -11,22 +7,12 @@
             <td mat-cell *matCellDef="let row"> {{row.id}} </td>
         </ng-container>
 
-        <!-- GUI Column -->
-        <ng-container matColumnDef="gui">
-            <th mat-header-cell *matHeaderCellDef>Edit GUI Mode</th>
-            <td mat-cell *matCellDef="let row">
-                <button [routerLink]="['/home/form-gui/'+row.id]" [queryParams]="{state: 'update'}" mat-button>
-                    <mat-icon>settings</mat-icon>
-                </button>
-            </td>
-        </ng-container>
-
         <!-- JSON Column -->
         <ng-container matColumnDef="json">
             <th mat-header-cell *matHeaderCellDef>Edit JSON Mode</th>
             <td mat-cell *matCellDef="let row">
                 <button [routerLink]="['/home/form-json/'+row.id]" [queryParams]="{state: 'update'}" mat-button>
-                    <mat-icon>settings</mat-icon>
+                    <mat-icon>edit</mat-icon>
                 </button>
             </td>
         </ng-container>
