fix checkbox and add new utility

--- a/projects/mt-form-builder/src/lib/components/factory/factory.component.html
+++ b/projects/mt-form-builder/src/lib/components/factory/factory.component.html
@@ -12,8 +12,8 @@
                                         </lib-select-input-dynamic>
                                         <lib-radio-input-multi *ngSwitchCase="'radio'" [config]="config" [fg]="fg" [formId]="formId">
                                         </lib-radio-input-multi>
-                                        <lib-checkbox-input *ngSwitchCase="'checkbox'" [config]="config" [fg]="fg" [formId]="formId">
-                                        </lib-checkbox-input>
+                                        <lib-checkbox-input-new *ngSwitchCase="'checkbox'" [config]="config" [fg]="fg" [formId]="formId">
+                                        </lib-checkbox-input-new>
                                         <lib-file-upload *ngSwitchCase="'file'" [config]="config" [fg]="fg" [formId]="formId">
                                         </lib-file-upload>
                                         <lib-image-upload *ngSwitchCase="'imageUpload'" [config]="config" [fg]="fg" [formId]="formId">
