--- a/projects/mt-form-builder/src/lib/components/lib/virtual-scroll-select/virtual-scroll-select.component.html
+++ b/projects/mt-form-builder/src/lib/components/lib/virtual-scroll-select/virtual-scroll-select.component.html
@@ -1,10 +1,10 @@
 <mat-form-field *ngIf="config.display">
     <mat-label>{{formInfoSvc.i18nLabel[config.label] || config.label}}</mat-label>
-    <mat-select [formControl]="base.ctrl" [errorStateMatcher]="base.matcher" (openedChange)="scrollTop($event,viewPort)" [required]="config.required">
+    <mat-select [errorStateMatcher]="base.matcher" (openedChange)="scrollTop($event,viewPort)" [required]="config.required" [multiple]="config.multiple">
         <mat-option *ngIf="selected" [value]="selected.value" style="display:none">
             {{formInfoSvc.i18nLabel[selected.label] || selected.label}}</mat-option>
         <cdk-virtual-scroll-viewport #viewPort [itemSize]="42" [style.height.px]=5*42 [minBufferPx]="210" [maxBufferPx]="420">
-            <mat-option [value]="el.value" *cdkVirtualFor="let el of config.options" (click)="saveSelected(el)">
+            <mat-option [value]="el.value" *cdkVirtualFor="let el of filterDuplicate()" (click)="saveSelected(el)">
                 {{formInfoSvc.i18nLabel[el.label] || el.label}}</mat-option>
         </cdk-virtual-scroll-viewport>
     </mat-select>
