fix style issue

--- a/projects/mt-form-builder/src/lib/components/lib/checkbox-input-new/checkbox-input-new.component.html
+++ b/projects/mt-form-builder/src/lib/components/lib/checkbox-input-new/checkbox-input-new.component.html
@@ -8,5 +8,5 @@
     </mat-checkbox>
   </div>
 </div>
-<div class="mgfb-radio-checkbox-error mat-error" *ngIf="base.matcher">
+<div class="mgfb-checkbox-error mat-error" *ngIf="base.matcher">
   {{formInfoSvc.i18nLabel[config.errorMsg] || config.errorMsg}}</div>
