--- a/projects/mt-form-builder/src/lib/components/lib/form.css
+++ b/projects/mt-form-builder/src/lib/components/lib/form.css
@@ -32,3 +32,11 @@ mat-form-field {
     line-height: 1.125;
     font-family: Roboto,"Helvetica Neue",sans-serif;
 }
+.mgfb-checkbox-error{
+    position: fixed;
+    margin-top: -8px;
+    font-size: 75%;
+    font-weight: 400;
+    line-height: 1.125;
+    font-family: Roboto,"Helvetica Neue",sans-serif;
+}
