--- a/projects/mt-form-builder/src/lib/components/factory/factory.component.html
+++ b/projects/mt-form-builder/src/lib/components/factory/factory.component.html
@@ -1,40 +1,39 @@
-<!-- NOTE:dynamic fields are consider as seperate form -->
-<div [id]="formId+'_mt_form_builder_body'">
-        <div *ngFor="let group of fis.totalRowGroupedRowCollection[formId]" style="display: flex;align-items: center;">
-                <div name="form-body" [ngClass]="{'form-body':showDynamicFormDelete()}" style="flex:1">
-                        <div *ngFor="let rowIndex of fis.totalRowGroupedRowCollectionIndex[formId][group];"
-                        style="display: flex;">
-                        <ng-container *ngFor="let config of fis.layoutCollection[formId][rowIndex], trackBy: trackItem"
-                        [ngSwitch]="config.type">
-                                        <lib-text-input *ngSwitchCase="'text'" [config]="config" [fg]="fg" [formId]="formId">
-                                        </lib-text-input>
-                                        <lib-select-input-dynamic *ngSwitchCase="'select'" [config]="config" [fg]="fg" [formId]="formId">
-                                        </lib-select-input-dynamic>
-                                        <lib-radio-input-multi *ngSwitchCase="'radio'" [config]="config" [fg]="fg" [formId]="formId">
-                                        </lib-radio-input-multi>
-                                        <lib-checkbox-input *ngSwitchCase="'checkbox'" [config]="config" [fg]="fg" [formId]="formId">
-                                        </lib-checkbox-input>
-                                        <lib-file-upload *ngSwitchCase="'file'" [config]="config" [fg]="fg" [formId]="formId">
-                                        </lib-file-upload>
-                                        <lib-image-upload *ngSwitchCase="'imageUpload'" [config]="config" [fg]="fg" [formId]="formId">
-                                        </lib-image-upload>
-                                        <lib-paginated-select *ngSwitchCase="'paginated-select'" [config]="config" [fg]="fg" [formId]="formId">
-                                        </lib-paginated-select>
-                                        <lib-virtual-scroll-select *ngSwitchCase="'virtual-select'" [config]="config" [fg]="fg" [formId]="formId">
-                                        </lib-virtual-scroll-select>
-                                        <lib-date-picker *ngSwitchCase="'date-picker'" [config]="config" [fg]="fg" [formId]="formId">
-                                        </lib-date-picker>
-                                        <lib-factory *ngSwitchCase="'form'" [formId]="config.key"
-                                                [formInfo]="config.form">
-                                        </lib-factory>
-                                </ng-container>
-                        </div>
-                </div>
-                <mat-icon *ngIf="showDynamicFormDelete()" tabindex="0" (click)="removeConfigs(group)"
-                        style="margin-left: 16px;">
+<!-- NOTE: dynamic fields are consider as seperate form -->
+<div [id]="formId+'-mt-form-body'" name="mt-form-body" style="display: flex; flex-direction: column;">
+        <div name="mt-form-row" *ngFor="let row of fis.sortedForms[formId]; let i =index" style="display: flex;">
+                <ng-container *ngFor="let config of row" [ngSwitch]="config.type">
+                        <!-- NOTE: skip render to have cleanner output, can be removed -->
+                        <ng-container *ngIf="config.display">
+                                <lib-text-input *ngSwitchCase="'text'" [key]="config.key" [formId]="formId">
+                                </lib-text-input>
+                                <lib-radio-input-multi *ngSwitchCase="'radio'" [key]="config.key" [formId]="formId">
+                                </lib-radio-input-multi>
+                                <lib-select-input-dynamic *ngSwitchCase="'select'" [key]="config.key" [formId]="formId">
+                                </lib-select-input-dynamic>
+                                <lib-checkbox-input *ngSwitchCase="'checkbox'" [key]="config.key" [formId]="formId">
+                                </lib-checkbox-input>
+                                <lib-file-upload *ngSwitchCase="'file'" [key]="config.key" [formId]="formId">
+                                </lib-file-upload>
+                                <lib-image-upload *ngSwitchCase="'imageUpload'" [key]="config.key" [formId]="formId">
+                                </lib-image-upload>
+                                <lib-paginated-select *ngSwitchCase="'paginated-select'" [key]="config.key"
+                                        [formId]="formId">
+                                </lib-paginated-select>
+                                <lib-virtual-scroll-select *ngSwitchCase="'virtual-select'" [key]="config.key"
+                                        [formId]="formId">
+                                </lib-virtual-scroll-select>
+                                <lib-date-picker *ngSwitchCase="'date-picker'" [key]="config.key" [formId]="formId">
+                                </lib-date-picker>
+                                <lib-factory *ngSwitchCase="'form'" [formId]="config.key">
+                                </lib-factory>
+                        </ng-container>
+                </ng-container>
+                <mat-icon *ngIf="displayDeleteBtn()" tabindex="0" (click)="fis.remove(i,formId)"
+                        style="padding: 16px 0px 0px 16px; border-left: 2px solid #673ab7;">
                         delete</mat-icon>
         </div>
 </div>
 <div>
-        <mat-icon tabindex="0" [id]="formId+'_mt_form_builder_add_btn'" *ngIf="formInfo.repeatable && !formInfo.disabled" (click)="add()"> add</mat-icon>
+        <mat-icon tabindex="0" [id]="formId+'_mt_form_builder_add_btn'"
+                *ngIf="formInfo.repeatable && !formInfo.disabled" (click)="fis.add(formId);"> add</mat-icon>
 </div>
