--- a/projects/mt-form-builder/src/lib/components/lib/image-upload/image-upload.component.html
+++ b/projects/mt-form-builder/src/lib/components/lib/image-upload/image-upload.component.html
@@ -1,20 +1,20 @@
-<ng-container *ngIf="config.display" [formGroup]="fg">
-    <ng-container>
-        <input #upload type="file" (change)="updateCtrl($event.target.files)" style="display: none;">
-        
-        <label class="mgfb-label" [ngClass]="{'error-label':config.errorMsg}" style="margin-bottom: 8px;" [for]="base.ctrlKey"><span>{{formInfoSvc.i18nLabel[config.label] || config.label}}</span><span class="mat-required">{{config.required?'*':''}}</span></label>
+<div *ngIf="config.display">
+    <input #upload type="file" (change)="updateCtrl($event.target.files)" style="display: none;">
 
-        <div *ngIf="isString(base.ctrl.value)" class="image-upload-card">
-            <img mat-card-image [src]="base.ctrl.value" (click)="upload.click()" class="image-upload-image">
-            <div style="display: flex;width: 100%;justify-content: center;">
-                <mat-icon class="image-upload-icon" color="primary" (click)="base.ctrl.setValue('',{emitEvent:false})">
-                    close
-                </mat-icon>
-            </div>
+    <label class="mgfb-label" [ngClass]="{'error-label':config.errorMsg}" style="margin-bottom: 8px;"
+        [for]="key"><span>{{fis.i18nLabel[config.label] || config.label}}</span><span
+            class="mat-required">{{config.required?'*':''}}</span></label>
+
+    <div *ngIf="isString(control.value)" class="image-upload-card">
+        <img mat-card-image [src]="control.value" (click)="upload.click()" class="image-upload-image">
+        <div style="display: flex;width: 100%;justify-content: center;">
+            <mat-icon class="image-upload-icon" color="primary" (click)="control.setValue('',{emitEvent:false})">
+                close
+            </mat-icon>
         </div>
-        <div *ngIf="!isString(base.ctrl.value)" class="image-upload-empty-card" (click)="upload.click()">
-            <mat-icon class="image-upload-icon">add </mat-icon>
-        </div>
-        <mat-error style="font-size: 75%;">{{formInfoSvc.i18nLabel[config.errorMsg] || config.errorMsg}}</mat-error>
-    </ng-container>
-</ng-container>
+    </div>
+    <div *ngIf="!isString(control.value)" class="image-upload-empty-card" (click)="upload.click()">
+        <mat-icon class="image-upload-icon">add </mat-icon>
+    </div>
+    <mat-error style="font-size: 75%;">{{fis.i18nLabel[config.errorMsg] || config.errorMsg}}</mat-error>
+</div>
