--- a/projects/mt-form-builder/src/lib/components/lib/radio-input-multi/radio-input-multi.component.html
+++ b/projects/mt-form-builder/src/lib/components/lib/radio-input-multi/radio-input-multi.component.html
@@ -1,15 +1,15 @@
-<form *ngIf="config.display" [formGroup]="fg" style="padding-bottom: 1.25em;"
-  [ngClass]="{'mat-error' : config.errorMsg}">
-  <label class="mgfb-label" [ngClass]="{'radio-disabled' : config.disabled}"
-    [for]="base.ctrlKey"><span>{{formInfoSvc.i18nLabel[config.label] || config.label}}</span><span
-      class="mat-required">{{config.required?'*':''}}</span></label>
-  <mat-radio-group style="display: flex;" [disabled]="config.disabled" [value]="base.ctrl.value"
+<form *ngIf="config.display" style="padding-bottom: 1.25em;" [ngClass]="{'mat-error' : config.errorMsg}">
+  <label class="mgfb-label" [ngClass]="{'radio-disabled' : config.disabled}" [for]="key">
+    <span>{{fis.i18nLabel[config.label] || config.label}}</span>
+    <span class="mat-required">{{config.required?'*':''}}</span>
+  </label>
+  <mat-radio-group style="display: flex;" [formControl]="control"
     [ngStyle]="{'flex-direction':config.direction==='row'?'row':'column'}">
-    <mat-radio-button *ngFor="let val of config.options" [value]="val.value" style="flex-grow: 1;margin-bottom: 12px;"
-      (click)="(!config.disabled)&&onClick(val)">
-      {{formInfoSvc.i18nLabel[val.label] || val.label}}
+    <mat-radio-button *ngFor="let option of config.options" [value]="option.value"
+      style="flex-grow: 1;margin-bottom: 12px;">
+      {{fis.i18nLabel[option.label] || option.label}}
     </mat-radio-button>
   </mat-radio-group>
 </form>
 <div class="mgfb-radio-checkbox-error mat-error" *ngIf="config.errorMsg">
-  {{formInfoSvc.i18nLabel[config.errorMsg] || config.errorMsg}}</div>
+  {{fis.i18nLabel[config.errorMsg] || config.errorMsg}}</div>
