--- a/projects/mt-form-builder/src/lib/components/lib/virtual-scroll-select/virtual-scroll-select.component.html
+++ b/projects/mt-form-builder/src/lib/components/lib/virtual-scroll-select/virtual-scroll-select.component.html
@@ -1,12 +1,13 @@
 <mat-form-field *ngIf="config.display">
-    <mat-label>{{formInfoSvc.i18nLabel[config.label] || config.label}}</mat-label>
-    <mat-select [errorStateMatcher]="base.matcher" (openedChange)="scrollTop($event,viewPort)" [required]="config.required" [multiple]="config.multiple">
+    <mat-label>{{fis.i18nLabel[config.label] || config.label}}<span
+        class="mat-required">{{config.required?'*':''}}</span></mat-label>
+    <mat-select (openedChange)="scrollTop($event,viewPort)" [multiple]="config.multiple" [formControl]="control"  [errorStateMatcher]="errorMatcher">
         <mat-option *ngIf="selected" [value]="selected.value" style="display:none">
-            {{formInfoSvc.i18nLabel[selected.label] || selected.label}}</mat-option>
+            {{fis.i18nLabel[selected.label] || selected.label}}</mat-option>
         <cdk-virtual-scroll-viewport #viewPort [itemSize]="42" [style.height.px]=5*42 [minBufferPx]="210" [maxBufferPx]="420">
-            <mat-option [value]="el.value" *cdkVirtualFor="let el of filterDuplicate()" (click)="saveSelected(el)">
-                {{formInfoSvc.i18nLabel[el.label] || el.label}}</mat-option>
+            <mat-option [value]="el.value" *cdkVirtualFor="let el of config.options" (click)="saveSelected(el)">
+                {{fis.i18nLabel[el.label] || el.label}}</mat-option>
         </cdk-virtual-scroll-viewport>
     </mat-select>
-    <mat-error>{{formInfoSvc.i18nLabel[config.errorMsg] || config.errorMsg}}</mat-error>
+    <mat-error>{{fis.i18nLabel[config.errorMsg] || config.errorMsg}}</mat-error>
 </mat-form-field>
