fix disabled style issue

--- a/projects/mt-form-builder/src/lib/components/lib/form.css
+++ b/projects/mt-form-builder/src/lib/components/lib/form.css
@@ -24,3 +24,6 @@ mat-form-field {
     line-height: 1.125;
     font-family: Roboto,"Helvetica Neue",sans-serif;
 }
+.label-disabled{
+    color: rgba(0,0,0,.54);
+}
