--- a/projects/mt-form-builder/src/lib/components/lib/checkbox-input/checkbox-input.component.html
+++ b/projects/mt-form-builder/src/lib/components/lib/checkbox-input/checkbox-input.component.html
@@ -1,6 +1,7 @@
 <div *ngIf="config.display" [ngStyle]="{'padding-bottom':config.label?'1em':0}"
-  [ngClass]="{'mat-error' : config.errorMsg}" style="flex: 1; margin-right: 16px;" >
-  <label class="mgfb-label" *ngIf="config.label" [for]="key"><span>{{fis.i18nLabel[config.label] ||
+  [ngClass]="{'mat-error' : config.errorMsg}" style="flex: 1; margin-right: 16px;">
+  <label class="mgfb-label" *ngIf="config.label" [ngClass]="{'label-disabled' : config.disabled}"
+    [for]="key"><span>{{fis.i18nLabel[config.label] ||
       config.label}}</span><span class="mat-required">{{config.required?'*':''}}</span></label>
   <div style="display: flex;flex-wrap: wrap;" [ngStyle]="{'flex-direction':config.direction==='row'?'row':'column'}">
     <mat-checkbox *ngFor="let option of config.options" style="flex-grow: 1;margin-bottom: 12px;"
